--- a/hosts.ini
+++ b/hosts.ini
@@ -3,6 +3,7 @@ N1 ansible_host=172.31.45.47 ansible_user=ec2-user ansible_ssh_private_key_file=
 N2 ansible_host=172.31.38.161 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/MYLINUX.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 N5 ansible_host=172.31.21.129 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/MYLINUX.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 N6 ansible_host=172.31.25.105 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ec2-user/MYLINUX.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+NODE1 ansible_host=172.31.25.83 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/MYLINUX.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 [g2]
 N3 ansible_host=172.31.39.51 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/MYLINUX.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 N4 ansible_host=172.31.40.173 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/MYLINUX.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'   
